# gridding2d

./: CMakeLists.txt  ConvKernel.cpp  ConvKernel.h  FFT2D.cpp  FFT2D.h  FindFFTW3.cmake  Grid.cpp  Grid.h  GridGpu.cpp  GridGpu.cu  GridGpu.h  GridLut.cpp  GridLut.h  GriddingKernel.cpp  GriddingKernel.h  GriddingMain.cpp  Main.cpp
GPU/: CMakeLists.txt  FFTGpu.cpp  FFTGpu.h  GridGpu.cpp  GridGpu.cu  GridGpu.h
k-export-liver/: liver.0.data  liver.1.data  liver.2.data  liver.3.data  liver.trj  note
